feat/module04 Manager API – /freeHands
